add list-building model

--- a/model/flask_config.yaml
+++ b/model/flask_config.yaml
@@ -1,4 +1,4 @@
 # User-agent used for querying Wikidata API
-CUSTOM_UA: "wiki-topic (toolforge) -- isaac@wikimedia.org"
+CUSTOM_UA: "reader-topic -- mgerlach@wikimedia.org"
 
 DEBUG: False
